[package]
name = "meerkat-client"
description = "LLM provider abstraction for Meerkat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
meerkat-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
tracing = { workspace = true }
slab = "0.4"
indexmap = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio_with_wasm = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
schemars = { workspace = true }
axum = { workspace = true }

[features]
default = ["anthropic", "openai", "gemini"]
anthropic = []
openai = []
gemini = []
integration-real-tests = []

[[test]]
name = "e2e_system_proxy"
path = "tests/e2e_system_proxy.rs"
required-features = ["integration-real-tests"]

[[test]]
name = "e2e"
path = "tests/e2e.rs"
required-features = ["integration-real-tests"]

[lints]
workspace = true
