[package]
name = "meerkat-client"
description = "Shim re-export crate — delegates to meerkat-llm-core and per-provider crates (B2 split)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
meerkat-core = { workspace = true }
meerkat-llm-core = { workspace = true }

# Feature-gated re-exports to per-provider crates.
meerkat-anthropic = { workspace = true, optional = true, default-features = false }
meerkat-openai = { workspace = true, optional = true, default-features = false }
meerkat-gemini = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
futures = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
async-trait = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["anthropic", "openai", "gemini"]
anthropic = ["dep:meerkat-anthropic"]
openai = ["dep:meerkat-openai"]
gemini = ["dep:meerkat-gemini"]
openai-realtime = ["meerkat-openai/realtime"]
integration-real-tests = []

# Legacy feature aliases kept as empty no-ops (shimmed in the new per-provider crates).
native-keyring = []
refresh-file-lock = []
oauth = []
aws-auth = []
google-oauth = []
azure-auth = []

[[test]]
name = "live_client_provider_matrix"
path = "tests/live_client_provider_matrix.rs"
required-features = ["integration-real-tests"]

[lints]
workspace = true
