[package]
name = "meerkat-comms-agent"
description = "Agent loop integration for Meerkat inter-agent communication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
meerkat-core = { workspace = true }
meerkat-comms = { workspace = true }
meerkat-comms-mcp = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
ciborium = "0.2"

[lints]
workspace = true
