[package]
name = "meerkat-comms-mcp"
description = "MCP tools for Meerkat comms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
meerkat-comms = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "net", "io-util", "time"] }
tempfile = { workspace = true }
ciborium = "0.2"

[lints]
workspace = true
