[package]
name = "meerkat-comms"
version = "0.1.0"
edition = "2021"
description = "Inter-agent communication for Meerkat"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
ciborium = "0.2"
uuid = { version = "1.0", features = ["v4", "serde"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
tokio = { version = "1.0", features = ["fs", "net", "sync", "rt", "io-util", "macros", "time"] }
thiserror = "1.0"
base64 = "0.22"
rand = "0.8"
parking_lot = "0.12"
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
zeroize = "1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["fs", "rt-multi-thread", "macros", "time"] }
tempfile = "3"

[lints]
workspace = true
