[package]
name = "meerkat-comms"
description = "Inter-agent communication for Meerkat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
meerkat-core = { workspace = true }
meerkat-contracts = { workspace = true }
inventory = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_bytes = "0.11"
ciborium = "0.2"
toml = { workspace = true }
schemars = { workspace = true }

# Encryption/Identity
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
zeroize = "1"

# Async runtime
tokio = { workspace = true, features = ["fs", "net", "sync", "rt", "io-util", "macros", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true, features = ["v4"] }
base64 = "0.22"
rand = "0.8"
parking_lot = "0.12"
tracing = { workspace = true }
bytes = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros", "time", "test-util"] }
tempfile = { workspace = true }
ciborium = "0.2"

[features]
default = []
integration-real-tests = []

[[test]]
name = "router_integration"
path = "tests/router_integration.rs"
required-features = ["integration-real-tests"]

[lints]
workspace = true
